#![windows_subsystem="windows"]

[package]
name = "client"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.0"
winapi = { version = "0.3.9", features =["winuser", "wincon"]}
clokwerk = "0.3.5"